# rubus-ecs

./: CMakeLists.txt
cmake/: example.cmake  sanitizer.cmake
example/: main.cpp
src/rubus-ecs/: ecs.cpp  ecs.hpp
